--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "buble-loader": "^0.2.2",
     "gulp-filter": "^4.0.0",
     "lodash": "^4.15.0",
-    "webpack": "2.1.0-beta.15 - 2.1.0-beta.22",
-    "webpack-stream-fixed": "3.2.2"
+    "webpack": "^1.14.0",
+    "webpack-stream": "^3.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
