--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-  "name": "laravel-elixir-webpack-official",
-  "version": "1.0.10",
-  "description": "Laravel Elixir Webpack integration",
-  "main": "dist/index.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/JeffreyWay/laravel-elixir-webpack-official.git"
-  },
-  "homepage": "https://github.com/JeffreyWay/laravel-elixir-webpack-official",
-  "scripts": {
-    "compile": "babel --presets=es2015 -d dist src",
-    "prepublish": "npm run compile"
-  },
-  "keywords": [
-    "laravel",
-    "elixir",
-    "webpack",
-    "gulp"
-  ],
-  "author": "Jeffrey Way",
-  "license": "MIT",
-  "dependencies": {
-    "buble": "^0.12.3",
-    "buble-loader": "^0.2.2",
-    "gulp-filter": "^4.0.0",
-    "lodash": "^4.15.0",
-    "webpack": "^1.14.0",
-    "webpack-stream": "^3.2.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.10.1",
-    "babel-preset-es2015": "^6.9.0"
-  }
+   "name":"laravel-elixir-webpack-reversion",
+   "version":"0.1.0",
+   "description":"Laravel Elixir Webpack integration,  A fork from Jeffrey Way's laravel-elixir-webpack-official to revert webpack + webpack stream version",
+   "main":"dist/index.js",
+   "homepage":"https://github.com/johnturingan/laravel-elixir-webpack-reversion",
+   "repository":{
+      "type":"git",
+      "url":"git@github.com:johnturingan/laravel-elixir-webpack-reversion.git"
+   },
+   "scripts":{
+      "compile":"babel --presets=es2015 -d dist src",
+      "prepublish":"npm run compile"
+   },
+   "keywords":[
+      "laravel",
+      "elixir",
+      "webpack",
+      "gulp"
+   ],
+   "author":"Jeffrey Way",
+   "license":"MIT",
+   "dependencies":{
+      "buble":"^0.12.3",
+      "buble-loader":"^0.2.2",
+      "gulp-filter":"^4.0.0",
+      "lodash":"^4.15.0",
+      "webpack":"^1.14.0",
+      "webpack-stream":"^3.2.0"
+   },
+   "devDependencies":{
+      "babel-cli":"^6.10.1",
+      "babel-preset-es2015":"^6.9.0"
+   }
 }
